bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__connect_ipv6.snap
---
source: bloodhound/src/deserializer.rs
assertion_line: 1497
expression: to_json(&event)
---
{
  "args": {
    "addr": "2001:0db8:0000:0000:0000:0000:0000:0001",
    "family": 10,
    "port": 80
  },
  "event": {
    "layer": "behavior",
    "name": "connect",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 5678,
    "ppid": 1234,
    "sessionid": 42,
    "timestamp": 1709000000000
  },
  "return_code": 0
}
