bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__execve.snap
---
source: bloodhound/src/deserializer.rs
expression: to_json(& event)
---
{
  "args": {
    "argv": [
      "/usr/bin/true"
    ],
    "argv_status": "unknown",
    "exec_capture_version": 0,
    "filename": "/usr/bin/true",
    "filename_status": "unknown"
  },
  "event": {
    "layer": "tooling",
    "name": "execve",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "bash",
    "pid": 2378,
    "process_ref": {
      "start_boottime_ns": 730454795517,
      "tgid": 2378
    },
    "sessionid": 145,
    "timestamp": 730456635700
  },
  "return_code": 0
}
