bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__lsm_ptrace.snap
---
source: bloodhound/src/deserializer.rs
expression: to_json(& event)
---
{
  "args": {
    "target_pid": 4860
  },
  "event": {
    "layer": "behavior",
    "name": "ptrace_access_check",
    "type": "LSM"
  },
  "header": {
    "auid": 1000,
    "comm": "python3",
    "pid": 4989,
    "process_ref": {
      "start_boottime_ns": 958675461500,
      "tgid": 4989
    },
    "sessionid": 328,
    "timestamp": 958727066012
  },
  "return_code": -1
}
