bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__lsm_setuid.snap
---
source: bloodhound/src/deserializer.rs
expression: to_json(& event)
---
{
  "args": {
    "new_gid": 0,
    "new_uid": 0,
    "old_gid": 0,
    "old_uid": 0
  },
  "event": {
    "layer": "behavior",
    "name": "task_fix_setuid",
    "type": "LSM"
  },
  "header": {
    "auid": 1000,
    "comm": "python3",
    "pid": 4611,
    "process_ref": {
      "start_boottime_ns": 923539873584,
      "tgid": 4611
    },
    "sessionid": 302,
    "timestamp": 923556687628
  },
  "return_code": 0
}
