bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__mkdir.snap
---
source: bloodhound/src/deserializer.rs
expression: to_json(& event)
---
{
  "args": {
    "filename": "/tmp/bh-golden-mkdir"
  },
  "event": {
    "layer": "behavior",
    "name": "mkdir",
    "type": "TRACEPOINT"
  },
  "header": {
    "auid": 1000,
    "comm": "python3",
    "pid": 3634,
    "process_ref": {
      "start_boottime_ns": 831815304601,
      "tgid": 3634
    },
    "sessionid": 235,
    "timestamp": 831830928645
  },
  "return_code": 0
}
