bloodhound/src/snapshots/bloodhound__deserializer__golden_tests__packet_ingress.snap
---
source: bloodhound/src/deserializer.rs
expression: to_json(& event)
---
{
  "args": {
    "data": "AAAAAAAAAAAAAAAACABFAAAsvKlAAEARgBV/AAABfwAAAQ==",
    "ifindex": 0
  },
  "event": {
    "layer": "behavior",
    "name": "ingress",
    "type": "PACKET"
  },
  "header": {
    "auid": 0,
    "comm": "",
    "pid": 0,
    "sessionid": 0,
    "timestamp": 1137297804245
  }
}
